# paperless-rules

./: .dockerignore  .env.dev.example  .env.example  .env.home.example  .gitignore  Containerfile  Dockerfile  PROJECT.md  README.md  docker-compose.example.yml  docker-compose.test.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/mockups/: A_section_cards.html  B_yaml_inline.html  C_doc_selection.html
scripts/: post_consume_via_rules.sh
src/paperless_rules/: __init__.py  bootstrap.py  cli.py  config.py  engine.py  paperless_client.py  rules_io.py
src/paperless_rules/editor/: __init__.py  app.py  auth.py
src/paperless_rules/editor/static/: index.html
src/paperless_rules/runtime/: __init__.py  apply.py  poller.py  post_consume.py
tests/: test_apply.py  test_bootstrap.py  test_editor_api.py  test_editor_apply.py  test_editor_auth.py  test_editor_readonly.py  test_engine.py  test_engine_enabled.py  test_engine_trace.py  test_rules_io.py  test_rules_io_rename.py
tests/e2e/: conftest.py  test_api.py  test_runtime.py
tests/fixtures/: acme_invoice.txt  swisscom_invoice.txt
